cpp/src/quickjs-ffi-ios.h

    JSValue *newInt32(JSContext *ctx, int32_t val);
    JSValue *newCatchOffset(JSContext *ctx, int32_t val);
    JSValue *newInt64(JSContext *ctx, int64_t val);
    JSValue *newUint32(JSContext *ctx, uint32_t val);
    JSValue *newBigInt64(JSContext *ctx, int64_t v);
    JSValue *newBigUint64(JSContext *ctx, uint64_t v);
    JSValue *newFloat64(JSContext *ctx, double d);
    JSValue *newStringLen(JSContext *ctx, const char *str1, size_t len1);
    JSValue *newString(JSContext *ctx, const char *str);
    JSValue *newAtomString(JSContext *ctx, const char *str);
    JSValue *newObjectProtoClass(JSContext *ctx, JSValueConst *proto, JSClassID class_id);
    JSValue *newObjectClass(JSContext *ctx, int class_id);
    JSValue *newObjectProto(JSContext *ctx, JSValueConst *proto);
    JSValue *newObject(JSContext *ctx);
    JSValue *newArray(JSContext *ctx);
    /*  JSAtom  */
    JSAtom *newAtom(JSContext *ctx, const char *str);
    JSValue *atomToValue(JSContext *ctx, JSAtom atom);
    JSValue *atomToString(JSContext *ctx, uint32_t atom);