lib/bindings/ffi_value.dart


// JSValue newInt32(JSContext *ctx, int32_t val);
final Pointer Function(Pointer<JSContext> ctx, int val) newInt32 = dylib
    .lookup<NativeFunction<Pointer<JSValue> Function(Pointer, Int32)>>('newInt32')
    .asFunction();
// JSValue newCatchOffset(JSContext *ctx, int32_t val);
final Pointer Function(Pointer<JSContext> ctx, int val) newCatchOffset =
    dylib.lookup<NativeFunction<Pointer Function(Pointer, Int32)>>('newCatchOffset').asFunction();
// JSValue newInt64(JSContext *ctx, int64_t val);
final Pointer Function(Pointer<JSContext> ctx, int val) newInt64 =
    dylib.lookup<NativeFunction<Pointer Function(Pointer, Int64)>>('newInt64').asFunction();
// JSValue newUint32(JSContext *ctx, uint32_t val);
final Pointer Function(Pointer<JSContext> ctx, int val) newUint32 =
    dylib.lookup<NativeFunction<Pointer Function(Pointer, Int64)>>('newUint32').asFunction();
// JSValue newBigInt64(JSContext *ctx, int64_t v);
final Pointer Function(Pointer<JSContext> ctx, int val) newBigInt64 =
    dylib.lookup<NativeFunction<Pointer Function(Pointer, Int64)>>('newBigInt64').asFunction();
// JSValue newBigUint64(JSContext *ctx, uint64_t v);
final Pointer Function(Pointer<JSContext> ctx, int val) newBigUint64 =
    dylib.lookup<NativeFunction<Pointer Function(Pointer, Int64)>>('newBigUint64').asFunction();
// JSValue newFloat64(JSContext *ctx, double d);
final Pointer Function(Pointer<JSContext> ctx, double val) newFloat64 =
    dylib.lookup<NativeFunction<Pointer Function(Pointer, Double)>>('newFloat64').asFunction();
// JSValue newStringLen(JSContext *ctx, const char *str1, size_t len1);
final Pointer Function(Pointer<JSContext> ctx, Pointer<Utf8Fix>, int val) newStringLen = dylib
    .lookup<NativeFunction<Pointer Function(Pointer, Pointer<Utf8Fix>, Uint32)>>('newStringLen')
    .asFunction();
// JSValue newString(JSContext *ctx, const char *str);
final Pointer Function(Pointer<JSContext> ctx, Pointer<Utf8Fix> str) newString = dylib
    .lookup<NativeFunction<Pointer Function(Pointer, Pointer<Utf8Fix>)>>('newString')
    .asFunction();
// JSValue newAtomString(JSContext *ctx, const char *str);
final Pointer Function(Pointer<JSContext> ctx, Pointer<Utf8Fix> str) newAtomString = dylib
    .lookup<NativeFunction<Pointer Function(Pointer, Pointer<Utf8Fix>)>>('newAtomString')
    .asFunction();
// DART_EXTERN_C JSAtom *newAtom(JSContext *ctx, const char *str)
final Pointer Function(Pointer<JSContext> ctx, Pointer<Utf8Fix> str) newAtom = dylib
    .lookup<NativeFunction<Pointer Function(Pointer, Pointer<Utf8Fix>)>>('newAtom')
    .asFunction();

final Pointer Function(Pointer<JSContext> context, int val) atomToString = dylib
    .lookup<NativeFunction<Pointer Function(Pointer<JSContext>, Uint32)>>('atomToString')
    .asFunction();

final Pointer Function(Pointer<JSContext> context, int val) atomToValue = dylib
    .lookup<NativeFunction<Pointer Function(Pointer<JSContext>, Uint32)>>('atomToValue')
    .asFunction();

// JSValue newObjectProtoClass(JSContext *ctx, JSValueConst proto, JSClassID class_id);
final Pointer Function(Pointer<JSContext> ctx, Pointer proto, int class_id) newObjectProtoClass =
    dylib
        .lookup<NativeFunction<Pointer Function(Pointer, Pointer, Uint32)>>('newObjectProtoClass')
        .asFunction();
// JSValue newObjectClass(JSContext *ctx, int class_id);
final Pointer Function(Pointer<JSContext> ctx, int class_id) newObjectClass =
    dylib.lookup<NativeFunction<Pointer Function(Pointer, Uint32)>>('newObjectClass').asFunction();

// JSValue newObjectProto(JSContext *ctx, JSValueConst proto);
final Pointer Function(Pointer<JSContext> ctx, Pointer proto) newObjectProto =
    dylib.lookup<NativeFunction<Pointer Function(Pointer, Pointer)>>('newObjectProto').asFunction();
// JSValue newObject(JSContext *ctx);
final Pointer Function(Pointer<JSContext> ctx) newObject =
    dylib.lookup<NativeFunction<Pointer Function(Pointer)>>('newObject').asFunction();
// JSValue newArray(JSContext *ctx);
final Pointer Function(Pointer<JSContext> ctx) newArray =
    dylib.lookup<NativeFunction<Pointer Function(Pointer)>>('newArray').asFunction();
